
	* twittering-mode.el (twittering-other-user-list-interactive): Fix
	condition to detect a cancel.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Use `search-forward-regexp' instead of `search-forward' to fix a
	meaningless search.

2009-12-26  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-string): reimplement
	without `block'.

2009-12-26  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-ensure-ca-cert): kludge for ssl
	certificate problem.
	(twittering-start-http-ssl-session): use
	`twittering-ensure-ca-cert'

2009-12-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-show-minibuffer-length): Replace
	`minibufferp' by `minibuffer-window-active-p' to work this on
	Emacs21.
	(twittering-show-minibuffer-length): Change a message style for
	Emacs23.
	(twittering-setup-minibuffer, twittering-finish-minibuffer): Hook
	`post-command-hook' instead of `after-change-functions' to work in
	cooperation with SKK.

2009-12-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-tinyurl-get): Fix typo to resolve
	error "Symbol's value as variable is void". This problem was found
	by naota.

2009-12-25  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-show-minibuffer-length): disabled
	on Emacs21 because `minibufferp' is not available.
	(twittering-update-status-from-minibuffer): set
	`minibuffer-message-timeout' to `nil'. `t' causes error on
	Emacs23.

2009-12-23  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-show-minibuffer-length): New
	defun to show the number of charactors in minibuffer.
	(twittering-setup-minibuffer): New defun to add it to
	`after-change-functions'; invoke via `minibuffer-setup-hook'.
	(twittering-finish-minibuffer): New defun to remove it from
	`after-change-functions'; invoke via `minibuffer-exit-hook'.
